# scripts

./: .gitignore  README.md  pyproject.toml
src/: img2pdf_script.py  prefix_files_script.py  report.json  serialize_dir.py
src/pdf_analyzer/: pdf_analyzer.py
