[tool.poetry]
name = "py-scripts"
version = "0.1.0"
description = "A Python project for handling images, documents, AI models, and PDFs."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

# Image Manipulation
Pillow = "^9.0.0"
opencv-python = "^4.5.1"
scikit-image = "^0.22.0"
imageio = "^2.9.0"

# Word/Excel/PowerPoint Documents
python-docx = "^0.8.11"
openpyxl = "^3.0.10"
python-pptx = "^0.6.21"

# AI Libraries
openai = "^1.0.0"  # For ChatGPT and GPT models
anthropic = "^0.18.0"  # For Claude AI
transformers = "^4.38.0"  # Hugging Face transformer models

# PDF Manipulation
PyPDF2 = "^1.26.0"
reportlab = "^3.5.67"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

